列车和航班轨迹实现